@@ -212,6 +212,16 @@ static const canon_mode_t canon_BJC_4400_modes[] = {
 };
 DECLARE_MODES(canon_BJC_4400,0);
 
+/* this seems to use different ESC (c bit for quality than pixma devices */
+static const canon_mode_t canon_BJC_4550_modes[] = {
+  {  180, 180,CANON_INK_K|CANON_INK_CMYK|CANON_INK_CcMmYK,"180x180dpi",N_("180x180 DPI"),INKSET(6_C2M2Y2K2c2m2),8,0,NULL,1.0,1.0,NULL,NULL,NULL,2},
+  {  360, 360,CANON_INK_K|CANON_INK_CMYK|CANON_INK_CcMmYK,"360x360dpi",N_("360x360 DPI"),INKSET(6_C2M2Y2K2c2m2),8,0,NULL,1.0,1.0,NULL,NULL,NULL,0},
+  {  720, 360,CANON_INK_K|CANON_INK_CMYK|CANON_INK_CcMmYK,"720x360dpi",N_("720x360 DPI"),INKSET(6_C2M2Y2K2c2m2),8,0,NULL,1.0,1.0,NULL,NULL,NULL,0},
+  {  360, 360,CANON_INK_K|CANON_INK_CMYK|CANON_INK_CcMmYK,"360x360dpi_high",N_("360x360 DPI HIGH"),INKSET(6_C2M2Y2K2c2m2),8,0,NULL,1.0,1.0,NULL,NULL,NULL,1},
+  {  720, 370,CANON_INK_K|CANON_INK_CMYK|CANON_INK_CcMmYK,"720x360dpi_high",N_("720x360 DPI HIGH"),INKSET(6_C2M2Y2K2c2m2),8,0,NULL,1.0,1.0,NULL,NULL,NULL,1},
+};
+DECLARE_MODES(canon_BJC_4550,0);
+
 
 static const canon_mode_t canon_BJC_5500_modes[] = {
   {  180, 180,CANON_INK_CMYK | CANON_INK_CcMmYK,"180x180dpi",N_("180x180 DPI"),INKSET(6_C2M2Y2K2c2m2),8,0,NULL,1.0,1.0,NULL,NULL,NULL,2},
