@@ -265,6 +265,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
 
      - Canon inkjet printers:
 
+       Canon   BJC 4550   (EXPERIMENTAL)
        Canon   BJC S330   (EXPERIMENTAL)
        Canon   BJC S520   (EXPERIMENTAL)
        Canon   BJC S530D  (EXPERIMENTAL)
